--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@slack/bolt": "^3.17.1",
     "chrono-node": "^2.7.6",
     "dotenv": "^17.2.3",
+    "express": "^4.18.2",
     "luxon": "^3.4.4"
   },
   "engines": {
