--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,22 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "app.js",
-      "use": "@vercel/node"
+  "functions": {
+    "api/index.js": {
+      "runtime": "nodejs18.x"
     }
-  ],
+  },
   "routes": [
     {
+      "src": "/slack/events",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/slack/interactive",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "/api/index.js"
     }
   ]
 }
